Properly check whether the profile is sRGB

BUG:447597